const mongoose = require('mongoose');

const ReservationSchema = new mongoose.Schema({
    reservationDate: {
        type: Date,
        required: true
    },
    user: {
        type: mongoose.Schema.ObjectId,
        ref: 'User',
        required: true
    },
    shop: {
        type: mongoose.Schema.ObjectId,
        ref: 'Shop',
        require: true
    },
    createAt: {
        type: Date,
        default: Date.now
    },


});

module.exports = mongoose.model('Reservation',ReservationSchema);